# Spegetti-Engine

./: .gitignore  CMakeLists.txt  Icon.xcf  Image.xcf  LICENSE  README.md  clean_build.sh
Entity_System/: CMakeLists.txt
Entity_System/Headers/: Entity_System.h
Entity_System/Sources/: Entity_System.cpp
Fork/: CMakeLists.txt
Fork/Headers/: Fork.h
Fork/Sources/: Fork.cpp
Map_System/: CMakeLists.txt
Map_System/Headers/: Map_System.h
Map_System/Sources/: Map_System.cpp
Project/: CMakeLists.txt
Project/Headers/: Project.h
Project/Sources/: Project.cpp  main.cpp
Spegetti/: CMakeLists.txt
Spegetti/Headers/: Spegetti.h
Spegetti/Headers/glad/: glad.h
Spegetti/Headers/stb_image/: stb_image.h
Spegetti/Sources/: Spegetti.cpp
Spegetti/Sources/Glad/: glad.c
Spegetti_Animation/: CMakeLists.txt
Spegetti_Animation/Headers/: Spegetti_Animation.h
Spegetti_Animation/Sources/: Spegetti_Animation.cpp
Spegetti_Animation_Controller/: CMakeLists.txt
Spegetti_Animation_Controller/Headers/: Spegetti_Animation_Controller.h
Spegetti_Animation_Controller/Sources/: Spegetti_Animation_Controller.cpp
Spegetti_Film_Maker/: CMakeLists.txt
Spegetti_Film_Maker/Headers/: Spegetti_Film_Maker.h
Spegetti_Film_Maker/Libraries/: glfw3.lib
Spegetti_Film_Maker/Sources/: Spegetti_Film_Maker.cpp
Spegetti_GUI/: CMakeLists.txt
Spegetti_GUI/Headers/: Spegetti_GUI.h
Spegetti_GUI/Sources/: Spegetti_GUI.cpp
Spegetti_Launcher/: CMakeLists.txt
Spegetti_Launcher/Headers/: Spegetti_Launcher.h
Spegetti_Launcher/Sources/: Spegetti_Launcher.cpp
Spegetti_Material_Editor/: CMakeLists.txt
Spegetti_Material_Editor/Headers/: Spegetti_Material_Editor.h
Spegetti_Material_Editor/Sources/: Spegetti_Material_editor.cpp
Spegetti_Noodle/: CMakeLists.txt
Spegetti_Noodle/Headers/: Spegetti_Noodle.h
Spegetti_Noodle/Sources/: Spegetti_Noodle.cpp
Spegetti_Sauce/: CMakeLists.txt
Spegetti_Sauce/Headers/: Spegetti_Sauce.h
Spegetti_Sauce/Sources/: Spegetti_Sauce.cpp
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt
src/Engine/Core/: CMakeLists.txt
src/Engine/Engine/: CMakeLists.txt
src/Engine/Engine/Sources/: Core.cpp
src/Engine/Launcher/: CMakeLists.txt
src/Engine/Launcher/Headers/: Launcher.h
src/Engine/Launcher/Sources/: GameClient.cpp  Launcher.cpp  LoadGame.cpp  main.c  main.cpp
src/Engine/PlugNPlay/: CMakeLists.txt
src/Engine/Spegetti_Console/: CMakeLists.txt
src/Engine/Spegetti_Console/Headers/: Spegetti_Console.h
src/Engine/Spegetti_Console/Sources/: Spegetti_Console.cpp
src/Engine/Spegetti_Entity_System/: CMakeLists.txt
src/Engine/Spegetti_Entity_System/Headers/: Spegetti_Entity_System.h
src/Engine/Spegetti_Entity_System/Sources/: Spegetti_Entity_System.cpp
src/Engine/Spegetti_Files/: CMakeLists.txt
src/Engine/Spegetti_Files/Headers/: Spegetti_Files.h
src/Engine/Spegetti_Files/Sources/: Spegetti_Files.cpp
src/Engine/Spegetti_Logic/: CMakeLists.txt
src/Engine/Spegetti_Logic/Headers/: Spegetti_Logic.h
src/Engine/Spegetti_Logic/Sources/: Spegetti_Logic.cpp
src/Engine/Spegetti_Map_System/: CMakeLists.txt
src/Engine/Spegetti_Map_System/Headers/: Spegetti_Map_System.h
src/Engine/Spegetti_Map_System/Sources/: Spegetti_Map_System.cpp
src/Engine/Spegetti_Memory/: CMakeLists.txt
src/Engine/Spegetti_Memory/Headers/: Spegetti_Memory.h
src/Engine/Spegetti_Memory/Sources/: Spegetti_Memory.cpp
src/Engine/Spegetti_Project_Launcher/: CMakeLists.txt
src/Engine/Spegetti_Project_Launcher/Headers/: NoClip.h
src/Engine/Spegetti_Project_Launcher/Sources/: NoClip.cpp  Spegetti_Project_Launcher.cpp
src/Engine/Spegetti_Renderer/: CMakeLists.txt  Render Equation.txt
src/Engine/Spegetti_Renderer/Headers/: Spegetti_Renderer.h
src/Engine/Spegetti_Renderer/Sources/: Camera.cpp  Debug_Quad.cpp  G_Buffer.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Post_Process_Effect.cpp  Shader.cpp  Spegetti_Renderer.cpp  Texture.cpp  Vertex.cpp  View_Port.cpp  Window.cpp
src/Game/: CMakeLists.txt
src/Game/Demo/: CMakeLists.txt
src/Game/Demo/Sources/: Demo.cpp  Freecam.cpp
src/Game/Engine/: CMakeLists.txt
src/Game/Engine/Sources/: Engine.cpp  Model.cpp
src/Games/: CMakeLists.txt
src/Games/Demo/: CMakeLists.txt
src/Games/Demo/Sources/: Demo.c  FreeCam.c
src/Launcher/: CMakeLists.txt
src/Launcher/Sources/: main.c
src/Plugins/: CMakeLists.txt
src/Plugins/File_Loading/: CMakeLists.txt
src/Plugins/File_Loading/Sources/: Renderer.cpp
src/Plugins/GLFW_Window/: CMakeLists.txt
src/Plugins/GLFW_Window/Sources/: Contex.c  GLFWKey.c  GLFW_Window.c  Init.c  Input.c
src/Plugins/GL_GLFW/: CMakeLists.txt
src/Plugins/GL_GLFW/Sources/: Contex.c
src/Plugins/GL_Renderer/: CMakeLists.txt
src/Plugins/GL_Renderer/Sources/: GL_Mesh.c  GL_Shader.c  Surface.c
src/Plugins/MGL_Renderer/: CMakeLists.txt
src/Plugins/MGL_Renderer/Sources/: Clear.c  Init.c  Instace.c  Mesh.c  Model.c  Screen.c  Shader.c  Surface.c  Texture.c
src/Plugins/SDL_GL_Renderer/: CMakeLists.txt
src/Plugins/SDL_GL_Renderer/Sources/: CreateContex.c  GL_Init.c  (+2 more)
src/Plugins/SDL_Window/: CMakeLists.txt
src/Spegetti_Console/Sources/: Spegetti_Console.cpp
src/Spegetti_Files/: CMakeLists.txt
src/Spegetti_Files/Sources/: Spegetti_Files.cpp
src/Spegetti_Project_Launcher/: CMakeLists.txt
src/Spegetti_Project_Launcher/Headers/: Spegetti_Project_Launcher.h
src/Spegetti_Project_Launcher/Sources/: Spegetti_Project_Launcher.cpp
src/Spegetti_Renderer/: CMakeLists.txt
src/Spegetti_Renderer/Headers/: FreeCam.h  Spegetti_Renderer.h
src/Spegetti_Renderer/Sources/: Camera.cpp  FreeCam.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Spegetti_Renderer.cpp  Vertex.cpp  Window.cpp
src/Third Party/: CMakeLists.txt
src/Third Party/ASSIMP/: CMakeLists.txt
src/Third Party/GLAD/: CMakeLists.txt
src/Third Party/GLFW/: CMakeLists.txt  glfw3.lib
src/Third Party/IMGUI/: CMakeLists.txt
src/Third Party/SDL/: CMakeLists.txt
src/Tools/Engine/: CMakeLists.txt
src/Tools/Fork/: CMakeLists.txt
src/Tools/Material_Editor/: CMakeLists.txt
src/Tools/UV_Viewer/: CMakeLists.txt
(+188 files in other folders)
